Created chat activity.

--- a/widgetutil/src/main/AndroidManifest.xml
+++ b/widgetutil/src/main/AndroidManifest.xml
@@ -1,2 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.widgetutil" />
+    package="com.example.android.widgetutil">
+
+    <application>
+        <activity android:name=".ChatActivity"
+            android:label="Chat">
+            <intent-filter>
+                <action android:name="com.example.android.widgetutil.ChatActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+    </application>
+
+</manifest>
